[gd_scene load_steps=2 format=3 uid="uid://bvytnhqr1pm0f"]

[ext_resource type="Script" path="res://entities/player/components/animal_transform_component.gd" id="1_yl4um"]

[node name="AnimalTransformComponent" type="Node"]
script = ExtResource("1_yl4um")

[node name="TransformTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
